@@ -321,13 +321,16 @@ def merge(other_revision, base_revision,
             if not found_id:
                 raise BzrCommandError("%s is not a source file in any"
                                       " tree." % fname)
-    merge_inner(this_branch, other_tree, base_tree, tempdir=None, 
-                ignore_zero=ignore_zero, backup_files=backup_files, 
-                merge_type=merge_type, interesting_ids=interesting_ids,
-                show_base=show_base)
+    conflicts = merge_inner(this_branch, other_tree, base_tree, tempdir=None,
+                            ignore_zero=ignore_zero,
+                            backup_files=backup_files, 
+                            merge_type=merge_type,
+                            interesting_ids=interesting_ids,
+                            show_base=show_base)
     if base_is_ancestor and other_rev_id is not None\
         and other_rev_id not in this_branch.revision_history():
         this_branch.add_pending_merge(other_rev_id)
+    return conflicts
 
 
 def set_interesting(inventory_a, inventory_b, interesting_ids):
@@ -352,9 +355,10 @@ def merge_inner(this_branch, other_tree, base_tree, tempdir=None,
     else:
         _tempdir = tempdir
     try:
-        _merge_inner(this_branch, other_tree, base_tree, _tempdir,
-                     ignore_zero, merge_type, backup_files, interesting_ids,
-                     show_base=show_base)
+        return _merge_inner(this_branch, other_tree, base_tree, _tempdir,
+                            ignore_zero, merge_type, backup_files,
+                            interesting_ids,
+                            show_base=show_base)
     finally:
         if tempdir is None:
             shutil.rmtree(_tempdir)
@@ -377,10 +381,11 @@ def _merge_inner(this_branch, other_tree, base_tree, user_tempdir,
     def get_inventory(tree):
         return tree.inventory
 
+    conflict_handler = MergeConflictHandler(this_tree, base_tree, other_tree,
+                                            ignore_zero=ignore_zero)
     inv_changes = merge_flex(this_tree, base_tree, other_tree,
                              generate_changeset, get_inventory,
-                             MergeConflictHandler(this_tree, base_tree,
-                             other_tree, ignore_zero=ignore_zero),
+                             conflict_handler,
                              merge_factory=merge_factory, 
                              interesting_ids=interesting_ids)
 
@@ -397,6 +402,9 @@ def _merge_inner(this_branch, other_tree, base_tree, user_tempdir,
         this_branch.set_inventory(regen_inventory(this_branch, 
                                                   this_tree.basedir,
                                                   adjust_ids))
+    conflicts = conflict_handler.conflicts
+    conflict_handler.finalize()
+    return conflicts
 
 
 def regen_inventory(this_branch, root, new_entries):
